fix: remove margin-right since used a gap

--- a/src/main/webapp/css/explain-error.css
+++ b/src/main/webapp/css/explain-error.css
@@ -1,9 +1,6 @@
 /* Explain Error Plugin Styles */
 
 /* Use Jenkins standard button styling but add our identifier */
-.explain-error-btn {
-  margin-right: 5px !important;
-}
 
 /* Container for when we need to create our own button bar */
 .explain-error-container {
